<resources>
    <string name="app_name">"Medicita"</string>
    <string name="font_bold">roboto_bold.ttf</string>
    <string name="font_light">roboto_light.ttf</string>
    <string name="font_regular">roboto_regular.ttf</string>
    <string name="font_thin">roboto_thin.ttf</string>
    <string name="login_as_patient">LOGIN AS PATIENT</string>
    <string name="login_as_provider">LOGIN AS PROVIDER</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="keep_me_signed_in">Keep me signed in.</string>
    <string name="sing_in">SIGN IN</string>
    <string name="forgot_pwd_msg">We\'ll email a link to make a brand new password RIP old password.
        You had a good run.
    </string>
    <string name="email">Email</string>
    <string name="submit">SUBMIT</string>
    <string name="register_group">Register Group</string>
    <string name="register_individual">Register individual</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="create_a_password">Create a password</string>
    <string name="name">Name</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex</string>
    <string name="i_have_read_accept_medicita_s">I have read accept Medicita\'s</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="join_now">Join Now</string>
    <string name="date_">Date</string>
    <string name="i_m_a_new_patient">I\'m a new patient!</string>
    <string name="sign_up_join_now_msg">
        Sign up for a Medicita account and book\nan appointment from the comfort\nof your home
        screen
    </string>
    <string-array name="doctor_navi_item">
        <item>DashBoard</item>
        <item>Waiting Room</item>
        <item>Visit History</item>
        <item>Patients</item>
        <item>Blog</item>
        <item>FAQ</item>
        <item>Contact Us</item>
    </string-array>
    <string-array name="patient_navi_item2">
        <item>DashBoard</item>
        <item>Medical Team</item>
        <item>My Message</item>
        <item>Consult Now</item>
        <item>Wellness Reminder</item>
        <item>Appointment History</item>
        <item>My Health</item>
        <item>Settings</item>
        <item>Notifications</item>
        <item>Past Appointment</item>
        <item>Blog</item>
    </string-array>
    <string-array name="patient_navi_item">
        <item>DashBoard</item>
        <item>My Messages</item>
        <item>Settings</item>
        <item>Notifications</item>
        <item>Blog</item>
        <item>Logout</item>
    </string-array>
    <string name="notification">Notification</string>
    <string name="massage">Massage</string>
    <string name="doctor_dashboard">Dashboard</string>
    <string name="doctor_waiting_room">Waiting Room</string>
    <string name="doctor_patient">Patient</string>
    <string name="doctor_visit_history">Visit History</string>
    <string name="doctor_Scheduling">Scheduling</string>
    <string name="petient_settings">Settings</string>
    <string name="petient_massage">My Massage</string>
    <string name="petient_consult">Counsult Now</string>
    <string name="petient_remainder">Wellness Reminder</string>
    <string name="petient_appointment">Past Appointment and Reviwes</string>
    <string name="petient_health">My Health</string>
    <string name="feeling_meh">Feeling meh?</string>
    <string name="find_doctor">Find a Doctor.</string>
    <string name="doctor_name">Doctor\'s Name\\Symptoms\\Condition</string>
    <string name="specialty">Specialty</string>
    <string name="type_appoinment">Type of Appoinment</string>
    <string name="doctor_location">Location</string>
    <string name="insurance">Insurance</string>
    <string name="search">Search</string>
    <string name="madicalteeam">Madical Team</string>
    <string name="book_again">Book Again</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="sharemy_onlineprofile">Share My Online Profile</string>
    <string name="nothanx">No Thanks</string>
    <string name="Add_to_Calendar">Add to Calendar</string>
    <string name="print_reminder">Print Reminder</string>
    <string name="reshedule">Reshedule</string>
    <string name="cancle">Cancel</string>
    <string name="insurancecard">Insurance Card</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="terms_policy">Terms of Use</string>
    <string name="privecy_policy">Privecy Policy</string>
    <string name="psignout">Signout</string>
    <string name="profile">Profile</string>
    <string name="passwords">Password</string>
    <string name="notificationsettins">Notification Settings</string>
    <string name="demographicinfo">Demographic Info</string>
    <string name="authorization">Authorizations</string>
    <string name="telimedicine_billinginformation">Telemedicine Billing Information</string>
    <string name="setting">Settings</string>
    <string name="current_pass">Entger your current password</string>
    <string name="choose_pass">Choose a password</string>
    <string name="confirm_pass">Confirm your password</string>
    <string name="btn_save">Save</string>
    <string name="appointment_2">Appointment(2)</string>
    <string name="medical_team">Medical Team</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="title_activity_patient_search">PatientSearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="race_select">Race select one or more</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="preferred_languge">Preferred Language</string>
    <string name="medicita_is_currently">Medicita is currently available in English and Espanol</string>
    <string name="zip">Zip</string>
    <string name="optional">(Optional)</string>
    <string name="hispanic_latino">Hispanic or Latine</string>
    <string name="hispanic_latino_not">Not Hispanic or Latine</string>
    <string name="decline_answer">Decline to Answer</string>
    <string name="hipp_authorization">Hipaa Authorization Setting</string>
    <string name="choosing_not">Choosing not to agree to Midicita HIPAA Authorization may result in not having access to all
    of Midicita services.</string>
    <string name="user_name">John Smoith(ME) -</string>
    <string name="not_authorized">Not Authorized</string>
    <string name="i_have_read">I have read and accept Medicita\'s </string>
    <string name="edit_profilt">Edit Profile</string>
    <string name="contact_info">Contact Info</string>
    <string name="family_member">Family Member</string>
    <string name="emergency_cintact">Emergency Contact</string>
    <string name="providers">Providers</string>
    <string name="please_cell">Uma Blasini please - Please call us at(855)1234555 to change your name.</string>
    <string name="call">Call</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="prefered_number">Preferred Number</string>
    <string name="address">Address</string>
    <string name="street_address">Street Address</string>
    <string name="apt_str_unit">Apt. Ste. Unit#</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="dob">Date of Birth</string>
    <string name="next">Next</string>
    <string name="address1">Address line 1</string>
    <string name="address2">Address line 2</string>
    <string name="phone">Phone</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="relationship">Relationship to Patient</string>
    <string name="emergency_contact_phone">Emergency Contact Phone</string>
    <string name="primary_care_physician">Primary Care Physician</string>
    <string name="primary_care_physician_name">Primary Care Physician name</string>
    <string name="number">Number</string>
    <string name="referring_doctor">Referring Doctor</string>
    <string name="referring_doctor_name">Referring Doctor Name</string>
    <string name="pharmacy_information">Pharmacy Information</string>
    <string name="who_is_responsible">Whi is responsible for payment?</string>
    <string name="i_am">I am</string>
    <string name="someone_else">Someone else is</string>
    <string name="are_you_covered">Are you covered by insurance?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="primary_insurace">Primary Insurance Policy Information?</string>
    <string name="who_is_primary_insurace">Who is primary insurance Policy holder?</string>
    <string name="insuance_carrier">Insurance Carrier</string>
    <string name="insurance_plan">Insurance Plan</string>
    <string name="insurance_id">Insurance ID / Policy #</string>
    <string name="group">Group #</string>
    <string name="are_you_covered_by">Are you covered by insurance</string>
    <string name="edit_profile_online">Edit Profile Online</string>
    <string name="no_morw_paper">No more paper forms!</string>
    <string name="check_in_inline">Check in online and information will be send directly to Dr. Jurado.</string>
    <string name="i_want_medicita">I went Medicita to help me mamage my personal my personal health informatio. </string>
    <string name="agree">Agree</string>
    <string name="review_your">Review Your Information</string>
    <string name="is_everything">Is everything here correct?. If so let\'s move on to the next section!</string>
    <string name="contine">Continue</string>
    <string name="register">Register</string>
    <string name="patient_info">Patient Info</string>
    <string name="marital_status">Marital Status</string>
    <string name="employment">Employment</string>
    <string name="are_you_employed">Are you employed?</string>
    <string name="occupation">Occupation</string>
    <string name="empoyer_name">Employer Name</string>
    <string name="empoyer_addess">Employer Address</string>
    <string name="empoyer_phone">Employer Phone</string>
    <string name="my_health">My Health</string>
    <string name="medicl">Medical</string>
    <string name="finish">Finish</string>
    <string name="great">Great!</string>
    <string name="nowhas_some">Now Dr. Jurado has same questions about your medical background</string>
    <string name="let_go">Let\'s go!</string>
    <string name="add_pharmacy">Add Pharmacy</string>
    <string name="reason_information">Reason Information</string>
    <string name="why_are_ouy_booking">Why are you booking this appointment</string>
    <string name="annua_pap">annual Pap Smear / GYN Exam</string>
    <string name="for_patient">For Patients</string>
    <string name="date">26 oct 2016</string>
    <string name="blog_detailtext">Could skipping be the key to live longer? Recent studies have shown that restricting your daily caloric intake can add years to your life.</string>
    <string name="show_comments">Show comments (8)</string>
</resources>