<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/blue"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/dp_20">


    <com.medicitadocter.custom.CustomTextView
        android:id="@+id/tvJoinNowTitleMsgPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/i_m_a_new_patient"
        android:textColor="@color/whit_txt"
        android:textSize="@dimen/sp_18"
        app:customFont="@string/font_bold" />

    <com.medicitadocter.custom.CustomTextView
        android:id="@+id/tvJoinNowMsgPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/sign_up_join_now_msg"
        android:textColor="@color/whit_txt"
        android:textSize="@dimen/sp_14"
        app:customFont="@string/font_light" />

    <com.medicitadocter.custom.CustomTextView
        android:id="@+id/tvJoinNowLoginPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/button_yellow_color"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/join_now"
        android:textAllCaps="true"
        android:textColor="@color/gray_txt"
        android:textSize="@dimen/sp_18"
        app:customFont="@string/font_regular"/>


</LinearLayout>