<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/dp_3"
        app:cardElevation="@dimen/dp_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:gravity="center_horizontal"
            android:orientation="vertical">



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_140"
                    android:src="@drawable/image_blog"
                    android:scaleType="centerCrop"/>

                <com.medicitadocter.custom.CustomTextView
                    android:id="@+id/tvJoinNowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/app_name"
                    android:lines="2"
                    android:ellipsize="end"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_14"
                    app:customFont="@string/font_bold"/>

            <com.medicitadocter.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_patient"
                android:layout_marginTop="@dimen/dp_20"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/sp_10"/>

     <com.medicitadocter.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="@dimen/dp_5"
         android:layout_marginBottom="@dimen/dp_10"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/sp_10"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>