<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/main_bg_img"
                tools:context=".common.singandjoin.LoginFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_25"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.medicitadocter.custom.CustomEditText
                android:id="@+id/etEmailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_draw"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/gray_txt"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/sp_16"
                app:customFont="@string/font_light"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/edit_txt_draw"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.medicitadocter.custom.CustomEditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/gray_txt"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/sp_16"
                app:customFont="@string/font_light"/>

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="@color/light_gray"/>

            <com.medicitadocter.custom.CustomTextView
                android:id="@+id/tvShowPwd"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/show"
                android:textColor="@color/violet_blue"
                android:textSize="@dimen/sp_16"
                app:customFont="@string/font_regular"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="right"
            android:orientation="vertical">

            <com.medicitadocter.custom.CustomTextView
                android:id="@+id/tvForgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="@dimen/dp_10"
                android:text="@string/forgot_your_password"
                android:textColor="@color/violet_blue"
                android:textSize="@dimen/sp_14"
                app:customFont="@string/font_regular"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="left"
            android:orientation="vertical">

            <com.medicitadocter.custom.CustomCheckBok
                android:id="@+id/cbKeepSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_3"
                android:text="@string/keep_me_signed_in"
                android:textColor="@color/gray_txt"
                android:textSize="@dimen/sp_14"
                app:customFont="@string/font_regular"
                app:theme="@style/CheckBox"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="vertical">

            <com.medicitadocter.custom.CustomTextView
                android:id="@+id/tvSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_white_color"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/sing_in"
                android:textAllCaps="true"
                android:textColor="@color/gray_txt"
                android:textSize="@dimen/sp_18"
                app:customFont="@string/font_regular"/>


        </LinearLayout>

    </LinearLayout>



        <com.medicitadocter.custom.CustomTextView
            android:id="@+id/tvJoinNowLoginDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/button_yellow_color"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/dp_10"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/join_now"
            android:textAllCaps="true"
            android:textColor="@color/gray_txt"
            android:textSize="@dimen/sp_18"
            app:customFont="@string/font_regular"
            android:visibility="visible"/>


    <LinearLayout
        android:id="@+id/ll_join_now_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:orientation="vertical">

        <include layout="@layout/c_join_now_msg_layout"/>

    </LinearLayout>


</RelativeLayout>
