<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login_img"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".common.login.LoginSelectUserTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.15"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_weight="0.85"
        android:gravity="center"
        android:orientation="vertical">

        <com.medicitadocter.custom.CustomTextView
            android:id="@+id/tvLoginAsPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_25"
            android:background="@drawable/violet_blue_color"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/login_as_patient"
            android:textAllCaps="true"
            android:textColor="@color/whit_txt"
            android:textSize="@dimen/sp_16"
            app:customFont="@string/font_regular"/>

        <com.medicitadocter.custom.CustomTextView
            android:id="@+id/tvLoginAsProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/violet_yellow_color"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/login_as_provider"
            android:textAllCaps="true"
            android:textColor="@color/gray_txt"
            android:textSize="@dimen/sp_16"
            app:customFont="@string/font_regular"/>


    </LinearLayout>


</LinearLayout>
