<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_weight="0"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="13dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/arrow_back"
                android:gravity="center" />
        </LinearLayout>

        <com.medicitadocter.custom.CustomTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Doctor &amp; Staff"
            android:textColor="@color/white"
            app:customFont="@string/font_regular"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivDot"
                android:layout_gravity="end|center"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/dot" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/main_bg_img"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_170"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/light_orange"
                android:gravity="center_horizontal"

                android:orientation="vertical">

                <com.medicitadocter.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="Can Fasting Help Us Live Longer?"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/sp_16"
                    app:customFont="@string/font_bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal">

                    <com.medicitadocter.custom.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/for_patient"
                        android:textColor="@color/black_color"
                        android:textSize="@dimen/sp_10"
                        app:customFont="@string/font_regular" />

                    <com.medicitadocter.custom.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:text="@string/date"
                        android:textColor="@color/black_color"
                        android:textSize="@dimen/sp_10"
                        app:customFont="@string/font_regular" />

                </LinearLayout>

            </LinearLayout>


            <ImageView
                android:id="@+id/iv_blogdetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_170"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_100"
                android:scaleType="fitXY"
                android:src="@drawable/image_blog" />

            <com.medicitadocter.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_blogdetail"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:lineSpacingExtra="@dimen/dp_5"
                android:text="@string/blog_detailtext"
                android:textColor="@color/gray_txt"
                android:textSize="@dimen/sp_12"
                app:customFont="@string/font_regular" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_alignParentBottom="true"
                android:background="@color/btn_gray"
                android:text="@string/show_comments"
                android:textColor="@color/black_color"
                android:textSize="@dimen/sp_15"/>

            <ImageView
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:src="@mipmap/share"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/dp_50"/>

        </RelativeLayout>


    </ScrollView>


</LinearLayout>